--- a/content.css
+++ b/content.css
@@ -1,3 +1,34 @@
 .markout-ext-marked-out {
     text-decoration: line-through;
 }
+
+.popup-container {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+  }
+  
+  .heading {
+    text-align: center; 
+    margin-bottom: 20px; 
+  }
+  
+  .text {
+    margin-bottom: 15px; 
+    font-size: 14px;
+    
+  }
+  
+  .image-container {
+    text-align: center; 
+  }
+  
+  .image-container img {
+    max-width: 100%; 
+    height: auto; 
+  }
+  
